grammar.ebnf
file
    = { import }, { top_decl };

import
    = "import", Ident, { ".", Ident }, [ "{", Ident, { ",", Ident }, "}" ];

top_decl
    = { modifier }, func
    | { modifier }, extern
    | struct_decl;

modifier
    = "@", Ident, [ Ident ];

extern
    = [ "pub" ], "extern", func_decl;

func_decl
    = "func", Ident, param_list, [ type ];

func
    = [ "pub" ], func_decl, block;

param_list
    = "(", [ param, { ",", param } ], ")";

param
    = Ident, type;

struct_decl
    = [ "pub" ], "struct", Ident, "{", { field_decl }, "}";

field_decl
    = Ident, type;

type
    = Ident
    | array_type;

array_type
    = "[", "]", type;

block
    = "{", { stmt }, "}";

stmt
    = stmt_expr
    | stmt_decl
    | stmt_assign
    | stmt_if
    | stmt_while
    | stmt_for
    | "break"
    | "continue"
    | stmt_return;

stmt_expr
    = expr;

stmt_decl
    = Ident, ":=", expr;

stmt_assign
    = Ident, "=", expr;

stmt_if
    = "if", expr, block, [ else_if ];

else_if
    = "else", if,
    | "else", block;

stmt_while
    = "while", expr, block;

stmt_for
    = "for", stmt, ";", expr, ";", stmt, block;

stmt_return
    = "return", [ expr ];

expr
    = expr_primary
    | expr_unary
    | expr_binary
    | expr_call
    | expr_member
    | expr_struct_lit
    | expr_cast;

expr_primary
    = Ident
    | expr_literal
    | "(", expr, ")";

expr_binary
    = expr, binary_op, expr;

binary_op
    = "*"
    | "/"
    | "+"
    | "-"
    | "%"
    | "=="
    | "!="
    | "<"
    | ">"
    | "<="
    | ">="
    | "&&"
    | "||";

expr_unary
    = unary_op, expr;

unary_op
    = "!"
    | "-";

expr_literal
    = Int
    | String
    | Float
    | Char
    | "true"
    | "false";

expr_call
    = expr, arg_list;

arg_list
    = "(", [ expr, { ",", expr }, [ "," ],  ], ")";

expr_member
    = expr, ".", Ident;

expr_struct_lit
    = [ Ident, "." ], Ident, "{", [ field_init, { ",", field_init } ], "}";

field_init
    = Ident, ":", expr;

expr_cast
    = expr, "as", type;
